    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/XYIntervalSeriesTests.java
    (testClear): Likewise,
    * tests/org/jfree/data/xy/junit/YIntervalSeriesTests.java
    (testClear): Likewise.
    
2007-11-27  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java:
	(drawImage(BufferedImage, BufferedImageOp, int, int)): Updated for method 
	moved to SWTUtils,
	(drawImage(Image, int, int, ImageObserver)): Implemented,
	(drawImage(Image, int, int, int, int, ImageObserver)): Likewise,
	(drawImage(Image, int, int, Color, ImageObserver)): Likewise,
	(drawImage(Image, int, int, int, int, Color, ImageObserver)): Likewise,
	(convertToSWT(BufferedImage)): Moved to SWTUtils.java,
	* swt/org/jfree/experimental/swt/SWTUtils.java:
	(convertAWTImageToSWT): New method,
	(convertToSWT(BufferedImage)): Moved from SWTGraphics2D.java.
	
2007-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/dial/DialPointer.java
	(Pointer.fillPaint): New attribute,
	(Pointer.outlinePaint): Likewise,
	(Pointer(int)): Initialize new fields,
	(getFillPaint): New method,
	(setFillPaint): Likewise,
	(getOutlinePaint): Likewise,
	(setOutlinePaint): Likewise,
	(draw): Use new attributes,
	(equals): Check new fields,
	(hashCode): Likewise,
	(writeObject): Handle serialization for new fields,
	(readObject): Likewise,
	* tests/org/jfree/chart/plot/dial/junit/DialPointerTests.java
	(testEqualsPointer): New test method,
	(testSerialization2): Likewise.
	
2007-11-22  David Gilbert  <david.gilbert@object-refinery.com>

    Fix for bug 1832432:
    * source/org/jfree/data/time/TimeSeries.java
    (clone): Reimplemented.

2007-11-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DefaultKeyedValues.java
    (removeValue): Always rebuild index,