@@ -82,6 +82,8 @@
  * 23-Mar-2007 : Reverted previous patch (bug fix 1606205) (DG);
  * 17-Apr-2007 : Added null argument checks to findSubplot() (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
+ * 27-Nov-2007 : Modified setFixedRangeAxisSpaceForSubplots() so as not to
+ *               trigger change event in subplots (DG);
  *
  */
 
@@ -600,13 +602,11 @@ public class CombinedDomainXYPlot extends XYPlot
      * @param space  the space.
      */
     protected void setFixedRangeAxisSpaceForSubplots(AxisSpace space) {
-
         Iterator iterator = this.subplots.iterator();
         while (iterator.hasNext()) {
             XYPlot plot = (XYPlot) iterator.next();
-            plot.setFixedRangeAxisSpace(space);
+            plot.setFixedRangeAxisSpace(space, false);
         }
-
     }
 
     /**
